--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,12 @@ name = "a1"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "==3.13"
+requires-python = ">=3.13"
 dependencies = [
     "jupyter>=1.1.1",
     "numpy>=2.4.1",
     "pandas>=2.3.3",
     "seaborn>=0.13.2",
-    "torch>=2.9.1",
 ]
 
 [build-system]
